# gravity_simulation

./: CMakeLists.txt  README.md
app/: nbody_cli.cpp
include/nbody/: body.hpp  csv_writer.hpp  physics.hpp  sim.hpp  vec2.hpp
src/: csv_writer.cpp  physics.cpp
